# msrv

./: .bumpversion.cfg  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  install.sh  msrv.dockerfile  msrv.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/lib/: main.py
app/lib/cache/: rate_limits_cache.py  tokens_cache_configs.py
app/lib/exceptions/: __init__.py  main.py
app/lib/funcs/: cpu_watch.py  gen.py  prompt_porcessor.tester.py  serializer.py
app/lib/hf/: consts.py  main.py  parser.py  switcher.py
app/lib/images/: saver.py
app/lib/logger/: main.py
app/lib/parallelism/: main.py
app/models/requests/: __init__.py  main.py
app/routes/test/: main.py
app/security/: JAATS.py  cors.py  oauth2.py  rate_limit.py
app/settings/: configs.py  consts.py  startup.py
msrv/: run.py
msrv/lib/exceptions/: __init__.py
msrv/logger/: __init__.py  _consts.py  config.py
msrv/models/: __init__.py
msrv/routes/: index.py
msrv/settings/: configs.py  routes.py  startup.py  urls.py
redis/limiter/: limiter.dockerfile  redis.conf
redis/tokens/: redis.conf  tokens.dockerfile
scripts/: dev_requires.txt  install.sh  requires.dev.txt  requires.txt  run.sh  structure.md
scripts/setup/: README.md  install.sh
tests/cache/: test_redis.py
tests/code/: test_env.py
tests/lab/: main.py
tests/rate_limit/: test.py
tests/rate_limiter/: test.py
tests/server_tokens/: test_fresh_token.py  test_same_token.py
tests/third_parties/: test_HFServerCoordinator.py  test_HF_API.py
(+60 files in other folders)
